# fast-jsonrpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fast_jsonrpc  globals.lua  jsonrpcd.cfg  main.lua
src/: http_handler.c  jsonrpcd.c  main.c  workqueue.c
src/include/: http_handler.h  jsonrpcd.h  workqueue.h
